# Morphy

./: .gitignore  Cargo.toml  README.md  app.py  install.sh  requirements.txt
.github/workflows/: release.yml
compression/: image.py  pdf.py
converters/: image.py  pdf.py  video.py
core/: dispatcher.py
docs/: arch.md  development.md  manual.md  rich_notes.md  roadmap.md  workflow.md
src/: main.rs
src/compression/: image.rs  mod.rs  pdf.rs
src/converters/: image.rs  markdown.rs  mod.rs  pdf.rs  video.rs
src/core/: dispatcher.rs  mod.rs  registry.rs
src/ui/: filepicker.rs  menus.rs  mod.rs  splash.rs  theme.rs
ui/: filepicker.py  menus.py  splash.py  theme.py
