[package]
name = "morphy"
version = "0.1.0"
edition = "2021"
description = "a simple, guided file converter for the terminal"

[features]
default = ["pdf"]
pdf = ["dep:mupdf"]

[dependencies]
# terminal ui
dialoguer = "0.11"
console = "0.15"
comfy-table = "7"
indicatif = "0.17"

# image processing
image = "0.25"

# pdf processing (optional — needs clang-devel installed)
mupdf = { version = "0.8", optional = true }

# markdown processing
pulldown-cmark = "0.12"

# error handling
anyhow = "1"
